# F4Discovery-daughter

./: .gitignore  Description.txt  README.md  reviewed.txt
cpld/src/: f4_daughter.vhd
cpld/synth/: cpld.ucf  cpld.xise
doc/: pins
pcb/: CPLD.sch  NXT.sch  audio_in.sch  cc3000.sch  cpld.sch  disc.sch  discovery.sch  f4_daughter-cache.lib  f4_daughter.brd  f4_daughter.cmp  f4_daughter.lib  f4_daughter.mod  f4_daughter.net  f4_daughter.pro  f4_daughter.sch  lcd.sch  motsai.mod  power.sch  rf.sch  sensors.sch
pcb/gerbers/: f4_daughter-Back.gbl  f4_daughter-Front.gtl  f4_daughter-Mask_Back.gbs  f4_daughter-Mask_Front.gts  f4_daughter-NPTH-drl.pho  f4_daughter-NPTH.drl  f4_daughter-PCB_Edges.gbr  f4_daughter-SilkS_Back.gbo  f4_daughter-SoldP_Back.gbp  f4_daughter-SoldP_Front.gtp  f4_daughter-drl.pho  f4_daughter.drl
spice/backlight/: sim.asc
sw/: CMakeLists.txt  start.gdb.in
sw/F4Discovery_daughter/: f4_daughter.cpp  f4_daughter.h  ftdi.cpp  ftdi.h  ltc3559.cpp  ltc3559.h
sw/src/: main.cpp
sw/src/platform/: board.h  mcuconf.h  platform.cpp  platform.h
